--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,10 @@
 theme: minima
 
+title: "Societies of Systems"
+subtitle: "A journey into digitization and the engineering of complex systems"
+banner: banner.jpg
+url: 'https://societies-of-systems.github.io'
+
 author:
   name: Jakob Axelsson
 
